# cali_lidar_roadside

./: CMakeLists.txt  package.xml  readme.md
data/: 1015.txt  e-high-lidar.txt  e-high-preneh-2.txt  e_high_matri.txt  e_high_neh-2.txt  e_high_neh.txt  e_low_lidar.txt  e_low_matrix.txt  e_low_neh.txt  e_low_preneh.txt  lidar.txt  matrix  neh.txt  pole_high_matrix.txt  pole_low_lidar_txt.txt  pole_low_matrix.txt  pole_low_preneh.txt  process_lidartxt.py  process_neh.py  test-clicked-points.txt  test.txt
include/lidar_calibration/: calibration.h  fitercat.h
launch/: two_lidars.launch
rviz/: two_lidars.rviz
scripts/: filter_and_cat.py
src/: calibration.cpp  filter_and_cat.cpp  pcd_process.cpp  ransac_ground.cpp  select_pointcloud.cpp  viewer.cpp
